[tool.poetry]
name = "fastapi-jwt-auth"
version = "0.1.0"
description = "An Implementation of fastapi api with jwt auth"
authors = ["UnplugCharger <isaacbyron@gmail.com>"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
passlib = "^1.7.4"
PyJWT = "^2.3.0"
SQLAlchemy = "^1.4.26"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
